cmake_minimum_required(VERSION 3.23)
project(Lab4)

set(CMAKE_CXX_STANDARD 14)

add_executable(Lab4 main.cpp "Source Files/Restaurant.cpp" "Header Files/Restaurant.h" "Source Files/Customer.cpp" "Header Files/Customer.h" "Source Files/People.cpp" "Header Files/People.h" "Source Files/Staff.cpp" "Header Files/Staff.h" "Source Files/Hostess.cpp" "Header Files/Hostess.h" "Source Files/Waiter.cpp" "Header Files/Waiter.h" "Source Files/Menu.cpp" "Header Files/Menu.h" "Source Files/BaseMenu.cpp" "Header Files/BaseMenu.h" "Source Files/HardMenu.cpp" "Header Files/HardMenu.h" "Source Files/Sommelier.cpp" "Header Files/Sommelier.h" "Source Files/Chef.cpp" "Header Files/Chef.h")
